# proyecto-3

./: pyproject.toml
docs/: data-google-earth.md  gee_query_results.json  google-earth-info-datasets.md
google-earth/: dataset_size_query.py  gee_to_zarr.py  mirar-pesos-datasets.py
situaciones/: situacion1.md
